# dealscan

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  tailwind.config.js
.github/workflows/: test.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_phone_number.py  0003_poll_pollanswer.py
accounts/static/src/: output.css
accounts/tests/: test_login.py  test_signup.py
billing/: admin.py  models.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_stripeuser_subscription_id.py
components/poll/: poll.html  poll.py
crawler/: admin.py  apps.py  decorators.py  jobs.sh  models.py  urls.py  utils.py  views.py
crawler/formatters/: __otomoto.py  constants.py  formatter.py
crawler/management/commands/: insertmodels.py  refreshfeeds.py
crawler/management/data/: car_data.csv  scrape_cars_data.py
crawler/migrations/: 0001_initial.py  0002_alter_offermetadata_offer.py  0002_remove_offermetadata_from_authorized_dealer_and_more.py  0003_alter_carmake_name.py  0003_alter_offermetadata_registration_number.py  0004_alter_carmodel_name.py  0004_alter_offermetadata_features.py  0005_alter_carmodel_name_and_more.py  0005_alter_offer_id.py  0006_alter_offer_id.py  0006_remove_carmodel_unique_car_model_for_make_and_more.py  0007_alter_offer_displacement_and_more.py  0007_remove_historicalsource_etag_and_more.py  0008_alter_offer_image_url.py  0009_alter_offermetadata_registration_number.py
crawler/templates/: all_offers.html  billing.html  dashboard.html  offers.html
crawler/templates/elements/: filter.html  sidebar.html
dealscan/: asgi.py  celery.py  middleware.py  settings.py  sites.py  urls.py  utils.py  views.py  wsgi.py
dealscan/templates/: 404.html
dealscan/templates/admin/: base_site.html  index.html
dealscan/templates/index/: index.html  pricing.html
dealscan/templates/layouts/: dashboard_base.html  simple_base.html  simple_base_with_sidebar.html
deploy/: ecs.py
infra/: .terraform.lock.hcl  ecr.tf  ecs.tf  loadbalancer.tf  logs.tf  outputs.tf  security.tf  variables.tf
infra/templates/: django_app.json.tpl
poll/: admin.py  apps.py  models.py
poll/migrations/: 0001_initial.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_pollanswer_unique_together.py
static/src/: output.css
(+18 files in other folders)
